nexus-repository.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    version: v1
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: nexus
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
        version: v1
    spec:
      containers:
      - name: nexus
        image: quay.io/piracarter1/ctt-nexus-repository:3.30.1-01-1
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    version: v1
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8081
    targetPort: 8081
  selector:
    app: nexus
    version: v1
