ingresses-nexus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nexus
  namespace: jenkins
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus
                port:
                  number: 8081
